# guitar-firmware

./: Cargo.toml  Readme.md
.github/: FUNDING.yml
src/: main.rs  reader.rs  report.rs
